--- a/json/config.json
+++ b/json/config.json
@@ -1,7 +1,7 @@
 //以下内容为互联网收集，只为自用。
 {
  
-  "spider": "./custom_spider.jar;md5;f3be1f1e9f8792e122d12e67b9c0875c",
+  "spider": "./custom_spider.jar",
   "wallpaper": "https://深色壁纸.xxooo.cf/",
   "warningText": "资源来自网络，所有内容仅供学习使用，请勿用于违法及商业用途，请勿付费购买。",
   "sites": [
