--- a/json/config.json
+++ b/json/config.json
@@ -6,7 +6,7 @@
   "warningText": "资源来自网络，所有内容仅供学习使用，请勿用于违法及商业用途，请勿付费购买。",
   "sites": [
    
-    {"key": "荐片","name": "🎬┃荐片┃影视","api": "csp_Jianpian","type": 3,"playerType": "2","searchable": 1,"quickSearch": 1,"changeable": 1
+    {"key": "荐片","name": "🎬┃荐片┃影视","api": "csp_Jianpian","type": 3,"playerType": "2","searchable": 1,"quickSearch": 1,"changeable": 1,"ext": "./jianpian.json"
 
     } ,
     {"key": "csp_douban","name": "🌕┃豆瓣┃热播","type": 3,"api": "csp_DouDou","searchable": 0,"quickSearch": 0,"filterable": 0},
