--- a/json/config.json
+++ b/json/config.json
@@ -331,7 +331,7 @@
       "api": "csp_W55Movie",
       "searchable": 1,
       "filterable": 1,
-      "ext": "https://w55xy.com/"
+      "ext": "https://5524278.vip/"
     },
     {
       "key": "DaGongRen",
@@ -348,7 +348,7 @@
       "api": "csp_HkTv",
       "searchable": 0,
       "filterable": 1,
-      "ext": "http://www.hktvyb.vip/"
+      "ext": "http://www.hktvyb.cc/"
     },
     {
       "key": "NGkt",
