--- a/json/config.json
+++ b/json/config.json
@@ -1,5 +1,5 @@
 {
-  "spider": "./custom_spider.jar",
+  "spider": "https://raw.githubusercontent.com/river-81/tvbox/refs/heads/main/json/custom_spider.jar",
   "lives": [
     {
       "name": "电视直播",
@@ -42,7 +42,7 @@
       "api": "csp_Douban",
       "searchable": 0,
       "filterable": 1,
-      "ext": "./douban.json"
+      "ext": "https://raw.githubusercontent.com/river-81/tvbox/refs/heads/main/json/douban.json"
     },
 
 
@@ -53,7 +53,7 @@
       "api": "csp_Jianpian",
       "searchable": 1,
       "filterable": 1,
-      "ext": "./jianpian.json"
+      "ext": "https://raw.githubusercontent.com/river-81/tvbox/refs/heads/main/json/jianpian.json"
     },
     {
       "key": "HkTv",
