--- a/json/config2.json
+++ b/json/config2.json
@@ -96,7 +96,8 @@
       "type": 3,
       "api": "csp_W55Movie",
       "searchable": 1,
-      "filterable": 1
+      "filterable": 1,
+      "ext": "https://555k1.com"
     },
     {
       "key": "Xb6v",
